Fix css pour l'alignement du btn d'action dans les blocs

--- a/src/sass/__repeat.scss
+++ b/src/sass/__repeat.scss
@@ -415,7 +415,7 @@ h6,.h6-like{
 			width:40px;
 			max-width:40px;
 			align-self:center;
-			text-align:center;
+			text-align:right;
 		}
 	}
 	&:before{
@@ -540,7 +540,7 @@ h6,.h6-like{
 			width:45px;
 			max-width:45px;
 			padding:10px 0 0 0;
-			text-align:center;
+			text-align:right;
 		}
 	}
 
